--- a/PFE/src/pfe/FXML.fxml
+++ b/PFE/src/pfe/FXML.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="pfe.FXMLController">
+<AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="pfe.FXMLController">
    <children>
       <Label layoutX="131.0" layoutY="138.0" text="fenetre numero 1">
          <font>
