--- a/PFE/src/pfe/Patient.fxml
+++ b/PFE/src/pfe/Patient.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="pfe.FXML1Controller">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="pfe.patientController">
    <children>
-      <Label layoutX="233.0" layoutY="147.0" text="fenetre numero 2">
+      <Label layoutX="91.0" layoutY="141.0" text="fenetre numero 2">
          <font>
             <Font size="57.0" />
          </font>
