--- a/PFE/src/pfe/Patient.fxml
+++ b/PFE/src/pfe/Patient.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import java.net.*?>
+
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -7,42 +8,51 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="415.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.patientController">
+<AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="644.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.patientController">
    <children>
-      <AnchorPane prefHeight="41.0" prefWidth="700.0" style="-fx-background-color: brown;">
+      <AnchorPane fx:id="color" prefHeight="41.0" prefWidth="999.0" style="-fx-background-color: brown;">
          <children>
-            <Button layoutX="674.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="25.0" prefWidth="25.0" text="x" />
-            <Button layoutX="649.0" layoutY="2.0" mnemonicParsing="false" onAction="#minimize" prefHeight="25.0" prefWidth="25.0" text="-" />
-            <Label layoutX="299.0" layoutY="5.0" prefHeight="17.0" prefWidth="149.0" text="Patients" textFill="WHITE">
+            <Button layoutX="966.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="25.0" prefWidth="25.0" text="x" />
+            <Button layoutX="934.0" layoutY="2.0" mnemonicParsing="false" onAction="#minimize" prefHeight="25.0" prefWidth="25.0" text="-" />
+            <Label layoutX="351.0" layoutY="5.0" prefHeight="17.0" prefWidth="149.0" text="Patients" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="21.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <Button layoutX="33.0" layoutY="59.0" mnemonicParsing="false" onAction="#retour" text="retour" />
-      <TableView layoutX="175.0" layoutY="141.0" prefHeight="221.0" prefWidth="376.0">
+      <TableView layoutX="31.0" layoutY="138.0" prefHeight="400.0" prefWidth="960.0" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="31.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Nom" />
-          <TableColumn prefWidth="75.0" text="Prenom" />
-            <TableColumn prefWidth="75.0" text="Sexe" />
-            <TableColumn prefWidth="75.0" text="Ville" />
-            <TableColumn prefWidth="75.0" text="Situation" />
+          <TableColumn prefWidth="140.0" resizable="false" text="Nom" />
+          <TableColumn prefWidth="125.0" resizable="false" text="Prenom" />
+            <TableColumn prefWidth="43.0" resizable="false" text="Sexe" />
+            <TableColumn prefWidth="76.0" resizable="false" text="Ville" />
+            <TableColumn prefWidth="552.0" resizable="false" text="Situation" />
         </columns>
       </TableView>
-      <Label layoutX="183.0" layoutY="92.0" text="SEXE :" />
-      <RadioButton layoutX="225.0" layoutY="84.0" mnemonicParsing="false" text="Male">
+      <Label layoutX="323.0" layoutY="93.0" text="SEXE :" />
+      <RadioButton layoutX="374.0" layoutY="90.0" mnemonicParsing="false" text="Male" AnchorPane.topAnchor="92.0">
          <toggleGroup>
             <ToggleGroup fx:id="sexxe" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="225.0" layoutY="105.0" mnemonicParsing="false" text="Femelle" toggleGroup="$sexxe" />
-      <TextField layoutX="524.0" layoutY="88.0" promptText="Recherche..." />
-      <Label layoutX="446.0" layoutY="92.0" text="Rechercher :" />
-      <Button layoutX="90.0" layoutY="59.0" mnemonicParsing="false" onAction="#consultation" text="NC" />
+      <RadioButton layoutX="436.0" layoutY="92.0" mnemonicParsing="false" text="Femelle" toggleGroup="$sexxe" AnchorPane.topAnchor="92.0" />
+      <TextField layoutX="524.0" layoutY="88.0" promptText="Recherche..." AnchorPane.rightAnchor="31.0" />
+      <Label layoutX="746.0" layoutY="92.0" text="Rechercher :" />
+      <Button layoutX="103.0" layoutY="59.0" mnemonicParsing="false" onAction="#consultation" prefHeight="40.0" prefWidth="170.0" text="Nouvelle Consultation">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Button>
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="46.0" layoutY="59.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/previous-512.png" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
   <URL value="@MyCss.css" />
