--- a/PFE/src/pfe/consultation.fxml
+++ b/PFE/src/pfe/consultation.fxml
@@ -6,91 +6,130 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="563.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.consultationController">
+<AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="644.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.consultationController">
    <children>
-      <AnchorPane fx:id="color" layoutX="-1.0" prefHeight="44.0" prefWidth="702.0" style="-fx-background-color: brown;">
+      <AnchorPane fx:id="color" layoutX="3.0" prefHeight="44.0" prefWidth="999.0" style="-fx-background-color: brown;" AnchorPane.bottomAnchor="603.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button layoutX="676.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="25.0" text="X" />
-            <Button layoutX="651.0" layoutY="2.0" mnemonicParsing="false" onAction="#minimize" prefHeight="20.0" prefWidth="25.0" text="-" />
+            <Button layoutX="971.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="25.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
+            <Button layoutX="930.0" layoutY="3.0" mnemonicParsing="false" onAction="#minimize" prefHeight="20.0" prefWidth="25.0" text="-" AnchorPane.topAnchor="3.0" />
+            <Label layoutX="437.0" layoutY="7.0" text="Consultation" textFill="#f2f2f2" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="437.0" AnchorPane.rightAnchor="436.0" AnchorPane.topAnchor="6.5">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="60.0" layoutY="96.0" text="NOM :">
+      <Label layoutX="60.0" layoutY="96.0" text="NOM :" AnchorPane.bottomAnchor="534.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="902.0" AnchorPane.topAnchor="96.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <Label layoutX="340.0" layoutY="96.0" prefHeight="17.0" prefWidth="62.0" text="PRENOM :" />
-      <Label layoutX="561.0" layoutY="96.0" text="AGE :" />
-      <Label layoutX="63.0" layoutY="163.0" text="SEXE :" />
-      <TextField layoutX="105.0" layoutY="92.0" prefHeight="25.0" prefWidth="214.0" promptText="Nom..." />
-      <TextField layoutX="404.0" layoutY="92.0" promptText="Prenom..." />
-      <TextField layoutX="600.0" layoutY="92.0" prefHeight="25.0" prefWidth="49.0" promptText="Age..." />
-      <RadioButton fx:id="male" layoutX="105.0" layoutY="163.0" mnemonicParsing="false" onAction="#hide" text="MALE">
+      <Label layoutX="434.0" layoutY="96.0" prefHeight="17.0" prefWidth="70.0" text="PRENOM :" AnchorPane.bottomAnchor="534.0" AnchorPane.leftAnchor="434.0" AnchorPane.rightAnchor="495.0" AnchorPane.topAnchor="96.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="798.0" layoutY="96.0" prefHeight="17.0" prefWidth="42.0" text="AGE :" AnchorPane.bottomAnchor="534.0" AnchorPane.leftAnchor="798.0" AnchorPane.rightAnchor="159.0" AnchorPane.topAnchor="96.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="63.0" layoutY="163.0" prefHeight="17.0" prefWidth="40.0" text="SEXE :" AnchorPane.bottomAnchor="467.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="899.0" AnchorPane.topAnchor="163.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <TextField layoutX="105.0" layoutY="92.0" prefHeight="25.0" prefWidth="214.0" promptText="Nom..." AnchorPane.bottomAnchor="530.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="680.0" AnchorPane.topAnchor="92.0" />
+      <TextField layoutX="506.0" layoutY="92.0" prefHeight="25.0" prefWidth="214.0" promptText="Prenom..." AnchorPane.bottomAnchor="530.0" AnchorPane.leftAnchor="506.0" AnchorPane.rightAnchor="279.0" AnchorPane.topAnchor="92.0" />
+      <TextField layoutX="841.0" layoutY="92.0" prefHeight="25.0" prefWidth="49.0" promptText="Age..." AnchorPane.bottomAnchor="530.0" AnchorPane.leftAnchor="841.0" AnchorPane.rightAnchor="109.0" AnchorPane.topAnchor="92.0" />
+      <RadioButton fx:id="male" layoutX="105.0" layoutY="163.0" mnemonicParsing="false" onAction="#hide" text="MALE" AnchorPane.bottomAnchor="466.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="840.0" AnchorPane.topAnchor="163.0">
          <toggleGroup>
             <ToggleGroup fx:id="sexe" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="femme" layoutX="167.0" layoutY="163.0" mnemonicParsing="false" onAction="#Show" text="FEMELLE" toggleGroup="$sexe" />
-      <Label layoutX="60.0" layoutY="133.0" prefHeight="17.0" prefWidth="51.0" text="POIDS :" />
-      <TextField layoutX="105.0" layoutY="129.0" prefHeight="25.0" prefWidth="62.0" promptText="Poids..." AnchorPane.leftAnchor="105.0" />
-      <TextField layoutX="517.0" layoutY="129.0" prefHeight="25.0" prefWidth="135.0" promptText="Numero De Telephone" />
-      <TextArea fx:id="Crondu" layoutX="52.0" layoutY="443.0" prefHeight="74.0" prefWidth="600.0" promptText="Compte rendu...." />
-      <Label layoutX="50.0" layoutY="414.0" prefHeight="25.0" prefWidth="95.0" text="COMPTE RENDU :" AnchorPane.bottomAnchor="124.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="558.0" AnchorPane.topAnchor="414.0" />
-      <Button layoutX="578.0" layoutY="526.0" mnemonicParsing="false" onAction="#cerOrd" prefHeight="25.0" prefWidth="82.0" text="Cert/Ord" />
-      <Button layoutX="495.0" layoutY="526.0" mnemonicParsing="false" onAction="#blue" prefHeight="25.0" prefWidth="68.0" text="Quit" />
-      <Label layoutX="343.0" layoutY="125.0" text="NUM DE TELEPHONE :" />
-      <Label fx:id="nbrgr" layoutX="237.0" layoutY="198.0" prefHeight="17.0" prefWidth="137.0" text="NOMRE DE GROSSESSE :" />
-      <TextField fx:id="ng" layoutX="371.0" layoutY="194.0" onKeyReleased="#gP" promptText="Nombre de grossesse..." />
-      <Label layoutX="237.0" layoutY="56.0" prefHeight="27.0" prefWidth="229.0" text="Informations personnelles:" AnchorPane.leftAnchor="237.0" AnchorPane.rightAnchor="237.0">
+      <RadioButton fx:id="femme" layoutX="167.0" layoutY="163.0" mnemonicParsing="false" onAction="#Show" text="FEMELLE" toggleGroup="$sexe" AnchorPane.bottomAnchor="466.0" AnchorPane.leftAnchor="167.0" AnchorPane.rightAnchor="762.0" AnchorPane.topAnchor="163.0" />
+      <Label layoutX="60.0" layoutY="133.0" prefHeight="17.0" prefWidth="51.0" text="POIDS :" AnchorPane.bottomAnchor="497.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="596.0" AnchorPane.topAnchor="133.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <TextField layoutX="105.0" layoutY="129.0" prefHeight="25.0" prefWidth="62.0" promptText="Poids..." AnchorPane.bottomAnchor="493.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="832.0" AnchorPane.topAnchor="129.0" />
+      <TextField layoutX="695.0" layoutY="129.0" prefHeight="25.0" prefWidth="195.0" promptText="Numero De Telephone" AnchorPane.bottomAnchor="493.0" AnchorPane.leftAnchor="695.0" AnchorPane.rightAnchor="109.0" AnchorPane.topAnchor="129.0" />
+      <TextArea fx:id="Crondu" layoutX="66.0" layoutY="492.0" prefHeight="88.0" prefWidth="879.0" promptText="Compte rendu...." AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="492.0" />
+      <Label layoutX="60.0" layoutY="466.0" prefHeight="31.0" prefWidth="103.0" text="COMPTE RENDU :" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="836.0" AnchorPane.topAnchor="466.0" />
+      <Button layoutX="882.0" layoutY="596.0" mnemonicParsing="false" onAction="#cerOrd" prefHeight="25.0" prefWidth="82.0" text="Cert/Ord" />
+      <Button layoutX="785.0" layoutY="596.0" mnemonicParsing="false" onAction="#blue" prefHeight="25.0" prefWidth="68.0" text="Quit" />
+      <Label layoutX="556.0" layoutY="133.0" prefHeight="17.0" prefWidth="137.0" text="NUM DE TELEPHONE :" AnchorPane.bottomAnchor="497.0" AnchorPane.leftAnchor="556.0" AnchorPane.rightAnchor="306.0" AnchorPane.topAnchor="133.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="nbrgr" layoutX="286.0" layoutY="197.0" prefHeight="17.0" prefWidth="137.0" text="NOMRE DE GROSSESSE :" />
+      <TextField fx:id="ng" layoutX="425.0" layoutY="193.0" onKeyReleased="#gP" promptText="Nombre de grossesse..." />
+      <Label layoutX="363.0" layoutY="53.0" prefHeight="27.0" prefWidth="245.0" text="Informations personnelles:" AnchorPane.leftAnchor="363.0" AnchorPane.rightAnchor="391.0">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="180.0" layoutY="133.0" text="Taille:" />
-      <Label layoutX="402.0" layoutY="163.0" text="Situation famillialle:" />
-      <MenuButton fx:id="select" layoutX="510.0" layoutY="160.0" mnemonicParsing="false" text="Selectionnez">
+      <Label layoutX="357.0" layoutY="133.0" prefHeight="17.0" prefWidth="46.0" text="Taille:" AnchorPane.bottomAnchor="497.0" AnchorPane.leftAnchor="357.0" AnchorPane.rightAnchor="596.0" AnchorPane.topAnchor="133.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="658.0" layoutY="165.0" prefHeight="17.0" prefWidth="125.0" text="Situation famillialle:" AnchorPane.bottomAnchor="465.0" AnchorPane.leftAnchor="658.0" AnchorPane.rightAnchor="216.0" AnchorPane.topAnchor="165.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <MenuButton fx:id="select" layoutX="785.0" layoutY="159.0" mnemonicParsing="false" text="Selectionnez" AnchorPane.bottomAnchor="459.0" AnchorPane.leftAnchor="785.0" AnchorPane.rightAnchor="111.0" AnchorPane.topAnchor="159.0">
         <items>
           <MenuItem fx:id="celib" mnemonicParsing="false" onAction="#hidEnf" text="Celibataire" />
           <MenuItem fx:id="mar" mnemonicParsing="false" onAction="#showEnfmar" text="Marié(e)" />
             <MenuItem fx:id="div" mnemonicParsing="false" onAction="#showEnfdiv" text="Divorcé(e)" />
         </items>
       </MenuButton>
-      <RadioButton fx:id="non" layoutX="179.0" layoutY="197.0" mnemonicParsing="false" text="Non">
+      <RadioButton fx:id="non" layoutX="162.0" layoutY="197.0" mnemonicParsing="false" text="Non" AnchorPane.topAnchor="197.0">
          <toggleGroup>
             <ToggleGroup fx:id="enfants" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="o" layoutX="125.0" layoutY="197.0" mnemonicParsing="false" text="Oui" toggleGroup="$enfants" />
-      <Label fx:id="enfant" layoutX="65.0" layoutY="197.0" text="Enfants:" />
-      <Label fx:id="gp" layoutX="529.0" layoutY="194.0" text="G/P:">
+      <RadioButton fx:id="o" layoutX="111.0" layoutY="198.0" mnemonicParsing="false" text="Oui" toggleGroup="$enfants" AnchorPane.topAnchor="197.0" />
+      <Label fx:id="enfant" layoutX="65.0" layoutY="197.0" text="Enfants:" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="197.0" />
+      <Label fx:id="gp" layoutX="626.0" layoutY="194.0" text="G/P:" AnchorPane.leftAnchor="624.0">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="p" layoutX="611.0" layoutY="193.0" prefHeight="25.0" prefWidth="28.0" />
-      <Label fx:id="G" layoutX="566.0" layoutY="193.0" prefHeight="25.0" prefWidth="37.0" />
-      <Label fx:id="slash" layoutX="604.0" layoutY="198.0" prefHeight="17.0" prefWidth="10.0" text="/" />
-      <Label layoutX="65.0" layoutY="230.0" text="Antecedants Familliaux:" />
-      <TextArea layoutX="195.0" layoutY="230.0" prefHeight="63.0" prefWidth="460.0" />
-      <ScrollBar layoutX="682.0" layoutY="43.0" orientation="VERTICAL" prefHeight="514.0" prefWidth="14.0" />
-      <Label layoutX="58.0" layoutY="300.0" text="Antecedants Personnels:" />
-      <TextArea layoutX="195.0" layoutY="300.0" prefHeight="63.0" prefWidth="460.0" />
-      <Label layoutX="64.0" layoutY="372.0" text="Motif de consultation:" />
-      <TextArea layoutX="195.0" layoutY="372.0" prefHeight="63.0" prefWidth="460.0" />
-      <TextField layoutX="225.0" layoutY="129.0" prefHeight="25.0" prefWidth="62.0" promptText="Taille" />
-      <Label layoutX="256.0" layoutY="164.0" text="Statut Vaccinal" />
-      <RadioButton layoutX="340.0" layoutY="151.0" mnemonicParsing="false" text="Oui" AnchorPane.leftAnchor="340.0">
+      <TextField fx:id="p" layoutX="706.0" layoutY="194.0" prefHeight="25.0" prefWidth="28.0" />
+      <Label fx:id="G" layoutX="659.0" layoutY="194.0" prefHeight="25.0" prefWidth="25.0" />
+      <Label fx:id="slash" layoutX="690.0" layoutY="198.0" prefHeight="17.0" prefWidth="10.0" text="/" />
+      <Label layoutX="65.0" layoutY="230.0" text="Antecedants Familliaux:" AnchorPane.bottomAnchor="400.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="814.0" AnchorPane.topAnchor="230.0" />
+      <TextArea layoutX="195.0" layoutY="230.0" prefHeight="63.0" prefWidth="460.0" AnchorPane.bottomAnchor="354.0" AnchorPane.leftAnchor="196.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="230.0" />
+      <Label layoutX="54.0" layoutY="315.0" text="Antecedants Personnels:" AnchorPane.bottomAnchor="315.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="810.0" AnchorPane.topAnchor="315.0" />
+      <TextArea layoutX="195.0" layoutY="317.0" prefHeight="63.0" prefWidth="750.0" AnchorPane.bottomAnchor="267.0" AnchorPane.leftAnchor="196.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="317.0" />
+      <Label layoutX="64.0" layoutY="403.0" text="Motif de consultation:" AnchorPane.bottomAnchor="227.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="822.0" AnchorPane.topAnchor="403.0" />
+      <TextArea layoutX="186.0" layoutY="403.0" prefHeight="63.0" prefWidth="750.0" AnchorPane.bottomAnchor="181.0" AnchorPane.leftAnchor="196.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="403.0" />
+      <TextField layoutX="403.0" layoutY="129.0" prefHeight="25.0" prefWidth="62.0" promptText="Taille" AnchorPane.bottomAnchor="493.0" AnchorPane.leftAnchor="403.0" AnchorPane.rightAnchor="534.0" AnchorPane.topAnchor="129.0" />
+      <Label layoutX="319.0" layoutY="165.0" prefHeight="17.0" prefWidth="103.0" text="Statut Vaccinal:" AnchorPane.bottomAnchor="465.0" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="577.0" AnchorPane.topAnchor="165.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <RadioButton layoutX="479.0" layoutY="164.0" mnemonicParsing="false" text="Oui" AnchorPane.leftAnchor="479.0" AnchorPane.topAnchor="164.0">
          <toggleGroup>
             <ToggleGroup fx:id="oui" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="338.0" layoutY="172.0" mnemonicParsing="false" text="Non" toggleGroup="$oui" AnchorPane.leftAnchor="340.0" />
+      <RadioButton layoutX="423.0" layoutY="164.0" mnemonicParsing="false" text="Non" toggleGroup="$oui" AnchorPane.leftAnchor="423.0" AnchorPane.topAnchor="164.0" />
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="47.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="560.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="945.0" AnchorPane.topAnchor="47.0">
+         <image>
+            <Image url="@image/previous-512.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="66.0" layoutY="47.0" onMouseClicked="#patient" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="560.0" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="893.0" AnchorPane.topAnchor="47.0">
+         <image>
+            <Image url="@image/patient-icon-0.png" />
+         </image>
+      </ImageView>
    </children>
     <stylesheets>
   <URL value="@MyCss.css" />
