--- a/PFE/src/pfe/Agenda.fxml
+++ b/PFE/src/pfe/Agenda.fxml
@@ -12,7 +12,10 @@
    <children>
       <AnchorPane layoutX="367.0" layoutY="2.0" prefHeight="44.0" prefWidth="1060.0" style="-fx-background-color: brown;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="959.0" layoutY="-2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="20.0" text="x" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
+            <Button layoutX="959.0" layoutY="-2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="20.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button layoutX="936.0" layoutY="3.0" mnemonicParsing="false" onAction="#minimize" prefHeight="20.0" prefWidth="20.0" text="-" AnchorPane.rightAnchor="38.0" />
             <Label layoutX="462.0" layoutY="7.0" prefHeight="31.0" prefWidth="116.0" text="Agenda" textFill="#fcfcfc" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="462.0" AnchorPane.rightAnchor="421.0" AnchorPane.topAnchor="7.0">
                <font>
