--- a/PFE/src/pfe/Patient.fxml
+++ b/PFE/src/pfe/Patient.fxml
@@ -17,7 +17,10 @@
    <children>
       <AnchorPane fx:id="color" prefHeight="41.0" prefWidth="999.0" style="-fx-background-color: brown;" AnchorPane.bottomAnchor="603.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button layoutX="966.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="25.0" prefWidth="25.0" text="x" />
+            <Button layoutX="966.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="25.0" prefWidth="25.0" text="X">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button layoutX="934.0" layoutY="2.0" mnemonicParsing="false" onAction="#minimize" prefHeight="25.0" prefWidth="25.0" text="-" />
             <Label layoutX="450.0" layoutY="5.0" prefHeight="31.0" prefWidth="99.0" text="Patients" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="450.0" AnchorPane.rightAnchor="450.0" AnchorPane.topAnchor="5.0">
                <font>
