--- a/PFE/src/pfe/Quit.fxml
+++ b/PFE/src/pfe/Quit.fxml
@@ -10,7 +10,10 @@
    <children>
       <AnchorPane prefHeight="25.0" prefWidth="464.0" style="-fx-background-color: brown;" AnchorPane.bottomAnchor="149.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="440.0" layoutY="1.0" mnemonicParsing="false" onAction="#No" text="X" />
+            <Button layoutX="440.0" layoutY="1.0" mnemonicParsing="false" onAction="#No" text="X">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Label layoutX="14.0" layoutY="6.0" prefHeight="21.0" prefWidth="101.0" text="Quitter" textFill="#f2f2f2">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
@@ -18,9 +21,18 @@
             </Label>
          </children>
       </AnchorPane>
-      <Button layoutX="116.0" layoutY="130.0" mnemonicParsing="false" onAction="#Yes" prefHeight="25.0" prefWidth="75.0" text="Oui" />
-      <Button layoutX="268.0" layoutY="130.0" mnemonicParsing="false" onAction="#No" prefHeight="25.0" prefWidth="75.0" text="Non" />
-      <Label layoutX="104.0" layoutY="73.0" prefHeight="25.0" prefWidth="311.0" text="VOULEZ VOUS VRAIMENT QUITER CETTE PAGE ?" />
+      <Button layoutX="116.0" layoutY="130.0" mnemonicParsing="false" onAction="#Yes" prefHeight="25.0" prefWidth="75.0" text="Oui">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="268.0" layoutY="130.0" mnemonicParsing="false" onAction="#No" prefHeight="25.0" prefWidth="75.0" text="Non">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Label layoutX="104.0" layoutY="73.0" prefHeight="25.0" prefWidth="311.0" text="VOULEZ VOUS VRAIMENT QUITER CETTE PAGE ?">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
    </children>
    <stylesheets>
   <URL value="@MyCss.css" />
