--- a/PFE/src/pfe/consultation.fxml
+++ b/PFE/src/pfe/consultation.fxml
@@ -18,8 +18,11 @@
    <children>
       <AnchorPane fx:id="color" layoutX="3.0" prefHeight="44.0" prefWidth="999.0" style="-fx-background-color: brown;" AnchorPane.bottomAnchor="603.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button layoutX="971.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="25.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
-            <Button layoutX="930.0" layoutY="3.0" mnemonicParsing="false" onAction="#minimize" prefHeight="20.0" prefWidth="25.0" text="-" AnchorPane.topAnchor="3.0" />
+            <Button layoutX="971.0" layoutY="2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="25.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="930.0" layoutY="3.0" mnemonicParsing="false" onAction="#minimize" prefHeight="20.0" prefWidth="25.0" text="-" AnchorPane.rightAnchor="39.0" AnchorPane.topAnchor="3.0" />
             <Label layoutX="437.0" layoutY="7.0" text="Consultation" textFill="#f2f2f2" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="437.0" AnchorPane.rightAnchor="436.0" AnchorPane.topAnchor="6.5">
                <font>
                   <Font name="System Bold Italic" size="21.0" />
