--- a/PFE/src/pfe/Agenda.fxml
+++ b/PFE/src/pfe/Agenda.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="rootpane" prefHeight="640.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.agendaController">
    <children>
-      <AnchorPane layoutX="367.0" layoutY="2.0" prefHeight="44.0" prefWidth="1060.0" style="-fx-background-color: brown;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="color" layoutX="367.0" layoutY="2.0" prefHeight="44.0" prefWidth="1060.0" style="-fx-background-color: brown;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button layoutX="959.0" layoutY="-2.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="20.0" prefWidth="20.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
                <font>
