--- a/PFE/src/pfe/cerOrd.fxml
+++ b/PFE/src/pfe/cerOrd.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -13,7 +15,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="rootpane" onMouseClicked="#back" prefHeight="640.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pfe.CerOrdController">
    <children>
-      <AnchorPane prefHeight="44.0" prefWidth="999.0" style="-fx-background-color: brown;" AnchorPane.rightAnchor="0.0">
+      <AnchorPane fx:id="color" prefHeight="44.0" prefWidth="999.0" style="-fx-background-color: brown;" AnchorPane.rightAnchor="0.0">
          <children>
             <Button layoutX="971.0" layoutY="4.0" mnemonicParsing="false" onAction="#exitButton" prefHeight="25.0" prefWidth="25.0" text="X" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0">
                <font>
@@ -27,15 +29,6 @@
             </Label>
          </children>
       </AnchorPane>
-      <Button layoutX="234.0" layoutY="299.0" mnemonicParsing="false" onAction="#showOrd" prefHeight="29.0" prefWidth="100.0" text="Cert" />
-      <Button layoutX="620.0" layoutY="299.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="100.0" text="Ord" />
-      <Label layoutX="188.0" layoutY="359.0" text="Certificat de :">
-         <font>
-            <Font size="25.0" />
-         </font>
-      </Label>
-      <TextField layoutX="354.0" layoutY="365.0" promptText="Par ex: grossesse" />
-      <TextArea layoutX="87.0" layoutY="433.0" prefHeight="119.0" prefWidth="817.0" />
       <Label layoutX="150.0" layoutY="99.0" prefHeight="25.0" prefWidth="41.0" text="Dr:">
          <font>
             <Font name="System Bold" size="16.0" />
@@ -72,11 +65,48 @@
       <TextField layoutX="659.0" layoutY="144.0" prefHeight="25.0" prefWidth="149.0" promptText="Prenom" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="144.0" />
       <TextField layoutX="660.0" layoutY="186.0" prefHeight="25.0" prefWidth="49.0" promptText="Age" />
       <DatePicker layoutX="659.0" layoutY="58.0" prefHeight="25.0" prefWidth="176.0" promptText="jj/mm/aaaa" AnchorPane.leftAnchor="659.0" AnchorPane.rightAnchor="164.0" />
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="41.0" layoutY="62.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="39.0" layoutY="71.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/previous-512.png" />
          </image>
       </ImageView>
+      <TabPane layoutX="39.0" layoutY="252.0" prefHeight="362.0" prefWidth="915.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab closable="false" text="Certificat">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="306.0" layoutY="27.0" text="Certificat de:">
+                           <font>
+                              <Font name="System Bold Italic" size="21.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="447.0" layoutY="21.0" prefHeight="40.0" prefWidth="193.0" promptText="Ex: Grossesse...">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextArea layoutX="30.0" layoutY="105.0" prefHeight="200.0" prefWidth="857.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="105.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab closable="false" text="Ordonnance">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextArea layoutX="29.0" layoutY="103.0" prefHeight="200.0" prefWidth="855.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="105.0" />
+                        <Label layoutX="404.0" layoutY="32.0" text="Ordonnance">
+                           <font>
+                              <Font name="System Bold Italic" size="21.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
     <stylesheets>
   <URL value="@MyCss.css" />
