--- a/PFE/src/pfe/consultation.fxml
+++ b/PFE/src/pfe/consultation.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -62,7 +63,7 @@
          </toggleGroup>
       </RadioButton>
       <RadioButton layoutX="887.0" layoutY="145.0" mnemonicParsing="false" text="Oui" toggleGroup="$StatutVaccinal" AnchorPane.leftAnchor="885.0" />
-      <RadioButton fx:id="male" layoutX="115.0" layoutY="164.0" mnemonicParsing="false" onAction="#hide" text="MALE" AnchorPane.bottomAnchor="465.0" AnchorPane.leftAnchor="115.0" AnchorPane.rightAnchor="830.0" AnchorPane.topAnchor="164.0">
+      <RadioButton fx:id="male" layoutX="129.0" layoutY="164.0" mnemonicParsing="false" onAction="#hide" text="MALE" AnchorPane.bottomAnchor="465.0" AnchorPane.leftAnchor="129.0" AnchorPane.rightAnchor="816.0" AnchorPane.topAnchor="164.0">
          <toggleGroup>
             <ToggleGroup fx:id="sexe" />
          </toggleGroup>
@@ -75,7 +76,7 @@
             <MenuItem fx:id="div" mnemonicParsing="false" onAction="#showEnfdiv" text="Divorcé(e)" />
         </items>
       </MenuButton>
-      <RadioButton fx:id="o" layoutX="115.0" layoutY="198.0" mnemonicParsing="false" text="Oui" AnchorPane.topAnchor="198.0">
+      <RadioButton fx:id="o" layoutX="129.0" layoutY="198.0" mnemonicParsing="false" text="Oui" AnchorPane.topAnchor="198.0">
          <toggleGroup>
             <ToggleGroup fx:id="enfants" />
          </toggleGroup></RadioButton>
@@ -83,7 +84,7 @@
       <TextField fx:id="ng" layoutX="593.0" layoutY="193.0" onKeyReleased="#gP" prefHeight="25.0" prefWidth="137.0" promptText="Nombre de grossesse..." />
       <TextField fx:id="p" layoutX="894.0" layoutY="193.0" prefHeight="25.0" prefWidth="28.0" />
       <TextArea layoutX="213.0" layoutY="230.0" prefHeight="63.0" prefWidth="726.0" AnchorPane.bottomAnchor="354.0" AnchorPane.leftAnchor="213.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="230.0" />
-      <TextArea layoutX="213.0" layoutY="331.0" prefHeight="63.0" prefWidth="750.0" AnchorPane.bottomAnchor="253.0" AnchorPane.leftAnchor="213.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="331.0" />
+      <TextArea layoutX="213.0" layoutY="315.0" prefHeight="63.0" prefWidth="750.0" AnchorPane.bottomAnchor="269.0" AnchorPane.leftAnchor="213.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="315.0" />
       <TextArea layoutX="186.0" layoutY="403.0" prefHeight="63.0" prefWidth="750.0" AnchorPane.bottomAnchor="181.0" AnchorPane.leftAnchor="213.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="403.0" />
       <TextArea fx:id="Crondu" layoutX="66.0" layoutY="492.0" prefHeight="88.0" prefWidth="879.0" promptText="Compte rendu...." AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="492.0" />
       <Label layoutX="60.0" layoutY="466.0" prefHeight="31.0" prefWidth="103.0" text="COMPTE RENDU :" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="836.0" AnchorPane.topAnchor="466.0">
@@ -108,11 +109,11 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <Label layoutX="444.0" layoutY="163.0" prefHeight="17.0" prefWidth="125.0" text="Situation famillialle:" AnchorPane.bottomAnchor="467.0" AnchorPane.leftAnchor="444.0" AnchorPane.rightAnchor="430.0" AnchorPane.topAnchor="163.0">
+      <Label layoutX="444.0" layoutY="163.0" prefHeight="17.0" prefWidth="149.0" text="SITUATION FAMILLIALE:" AnchorPane.bottomAnchor="467.0" AnchorPane.leftAnchor="444.0" AnchorPane.rightAnchor="406.0" AnchorPane.topAnchor="163.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <Label fx:id="enfant" layoutX="65.0" layoutY="197.0" text="Enfants:" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="197.0">
+      <Label fx:id="enfant" layoutX="65.0" layoutY="197.0" prefHeight="17.0" prefWidth="68.0" text="ENFANTS:" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="197.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
@@ -138,7 +139,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="47.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="560.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="945.0" AnchorPane.topAnchor="47.0">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="47.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true" styleClass="button" AnchorPane.bottomAnchor="560.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="945.0" AnchorPane.topAnchor="47.0">
          <image>
             <Image url="@image/previous-512.png" />
          </image>
@@ -149,6 +150,12 @@
          </font>
       </Label>
       <Button fx:id="terminer" layoutX="797.0" layoutY="596.0" mnemonicParsing="false" onAction="#terminer" prefHeight="29.0" prefWidth="70.0" text="Terminer" />
+      <DatePicker layoutX="225.0" layoutY="598.0" />
+      <Label layoutX="60.0" layoutY="602.0" prefHeight="17.0" prefWidth="161.0" text="DATE DE CONSULTATION:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
     <stylesheets>
   <URL value="@MyCss.css" />
